<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DevDrawer2</string>

    <string name="pref_show_activity_choice">show_activity_choice</string>
    <bool name="pref_show_activity_choice_default">false</bool>

    <string name="pref_sort_order" translatable="false">sort_order</string>
    <string name="pref_sort_order_default" translatable="false">@string/sort_order_last_updated</string>
    <string name="sort_order_last_updated" translatable="false">LAST_UPDATED</string>
    <string name="sort_order_first_installed" translatable="false">FIRST_INSTALLED</string>
    <string name="sort_order_name" translatable="false">NAME</string>
    <string name="sort_order_package_name" translatable="false">PACKAGE_NAME</string>
    <array name="sort_order_labels">
        <item>Last updated</item>
        <item>First installed</item>
        <item>Name</item>
        <item>Package name</item>
    </array>
    <array name="sort_order_values">
        <item>@string/sort_order_last_updated</item>
        <item>@string/sort_order_first_installed</item>
        <item>@string/sort_order_name</item>
        <item>@string/sort_order_package_name</item>
    </array>

    <string name="pref_feature_analytics_opted_in" translatable="false">feature_analytics_opted_in</string>

    <!-- AboutLibraries -->
    <string name="aboutLibraries_description_name">DevDrawer</string>
    <string name="aboutLibraries_description_text">An Android application designed to help developers by automatically adding their apps to a widget for easy launching.</string>
    <string name="aboutLibraries_description_special1_name">Play Store</string>
    <string name="aboutLibraries_description_special2_name">Github</string>

    <!-- New -->
    <string name="packagefilter">Package filter</string>
    <string name="settings">Settings</string>
    <string name="app_info">App info</string>

    <string name="profiles">Profiles</string>
    <string name="widgets">Widgets</string>
    <string name="save">Save</string>
    <string name="no_profiles">No profiles</string>
    <string name="new_profile">New</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="apply">Apply</string>
    <string name="add">Add</string>
    <string name="reload">Reload</string>
    <string name="edit_widget">Edit widget</string>
    <string name="close">Close</string>
    <string name="info">Info</string>
    <string name="app_signature">App signature</string>
    <string name="hint_profile_editing">You can edit profiles by long-clicking an entry</string>
    <string name="delete">Delete</string>
    <string name="uninstall">Uninstall</string>
    <string name="app_details">App details</string>
    <string name="add_app_signature">App signature</string>
    <string name="add_package_name">package name</string>
    <string name="app_icon">App icon</string>
    <string name="enter_package_name_filter">Enter package name filter</string>
    <string name="select_signature_from_app">Select signature from app</string>
    <string name="apps_matching_filter">Apps matching filter</string>
    <string name="cancel">Cancel</string>
    <string name="no_widgets_created">No widgets created</string>
    <string name="add_widget">Add widget</string>
    <string name="pick_widget_color">Pick widget color</string>
    <string name="ok">OK</string>
    <string name="error_profile_in_use">Cannot delete profile, still being used by widgets</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_compose">ComposeActivity</string>

    <!-- WidgetCard -->
    <string name="widget_id_template">ID: %1$d</string>

    <!-- WidgetProfileListScreen -->
    <string name="widget_profile_list_create_new">Create new profile</string>

    <!-- WidgetProfileCard -->
    <string name="widget_profile_id_template">ID: %1$s</string>
    <string name="loading">Loading…</string>

    <!-- Settings -->
    <string name="pref_show_activity_choice_title">Show activity choice on launch</string>
    <string name="pref_sort_order_title">Widget Sorting Options</string>
    <string name="pref_feature_analytics_opted_in_title">Opt-in to analytics</string>
    <string name="clear">Clear</string>
    <string name="delete_profile">Delete profile?</string>
    <string name="no_apps_available">No apps available or all already added as filter</string>
</resources>
