<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Activity Launcher">
        <SwitchPreferenceCompat
            android:key="@string/pref_show_activity_choice"
            android:title="Show activity choice on launch"
            app:defaultValue="@bool/pref_show_activity_choice_default" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Sorting">
        <ListPreference
            android:defaultValue="@string/pref_sort_order_default"
            android:entries="@array/sort_order_labels"
            android:entryValues="@array/sort_order_values"
            android:key="@string/pref_sort_order"
            android:title="Widget Sorting Options" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="feature_analytics"
        android:title="Analytics"
        app:isPreferenceVisible="false">
        <SwitchPreferenceCompat
            android:key="@string/pref_feature_analytics_opted_in"
            android:title="Opt-in to analytics"
            app:defaultValue="false"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>

</PreferenceScreen>