<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"
        app:helperText="Choose a name for the widget"
        app:helperTextEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_color"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add border -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_color"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="12dp"
        app:layout_constraintBaseline_toBaselineOf="@id/input_layout_name"
        app:layout_constraintLeft_toRightOf="@id/input_layout_name"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txt_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profiles"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_new_profile"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name" />

    <TextView
        android:id="@+id/txt_edit_profile_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_profile_editing"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_new_profile"
        app:layout_constraintTop_toBottomOf="@id/txt_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_profile"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_profile"
        app:icon="@drawable/ic_outline_add_box_24"
        app:layout_constraintBottom_toBottomOf="@id/txt_edit_profile_hint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_profiles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_profile_hint"
        tools:listitem="@layout/list_item_widget_profile" />

    <TextView
        android:id="@+id/txt_no_profiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_profiles"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_profiles" />

</androidx.constraintlayout.widget.ConstraintLayout>